examples/test/testpolicy3089.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3089
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key26: value26
      key31: value31
      key46: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value13
          key10: value2
          key9: value8
      podSelector:
        matchLabels:
          key4: value47
          key5: value45
